Remove experimental language features
Signed-off-by: Brady <zeromemesdev@gmail.com>