@@ -11,11 +11,6 @@ java {
     }
 }
 
-// Enable preview language features
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 repositories {
     mavenCentral()
     maven {
